--- a/src/main/webapp/views/main.html
+++ b/src/main/webapp/views/main.html
@@ -39,7 +39,7 @@
 
     <div class="row">
         <div class="board">
-            <div class="row-in-world" ng-repeat="cellrow in world track by $index">
+            <div class="row-in-generation" ng-repeat="cellrow in generation track by $index">
                 <div class="cell-container" ng-repeat="cell in cellrow track by $index">
                     <div class="cell" ng-class="{'true': cell, 'false': !cell}"
                          ng-click="toggleCell($index, $parent.$index)"></div>
